@@ -1,6 +1,15 @@
 2011-11-04  Rafal Carr  <funman@videolan.org>
 	    Kai Tietz  <ktietz@redhat.com>
 
+	* _mingw_print_push.h: Remove wscanf-defines.
+	* _mingw_print_pop.h: Likewise.
+	* stdio.h: Replace macro-wscanf override via alias.
+	* wchar.h: Likewise.
+
+	* _mingw_print_push.h: Remove scanf-defines.
+	* _mingw_print_pop.h: Likewise.
+	* stdio.h: Replace macro-scanf override via alias.
+
 	* _mingw_print_push.h: Remove wprintf-defines.
 	* _mingw_print_pop.h: Likewise.
 	* stdio.h: Replace macro-wprintf override via alias.
